Added dockerfile, migrated to go modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,19 @@ x-neo4j_container: &neo4j_container
 
 version: '3.6'
 services: 
+    api:
+        build: .
+        command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+        container_name: api
+        depends_on:
+          - neo4j_development
+        ports:
+          - "8080:8080"
+        environment:
+          <<: *postgres_environment
+        volumes:
+          - .:/var/app/current
+
     neo4j_development: 
         <<: *neo4j_container
         container_name: neo4j_development
