--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,23 @@
-x-neo4j_container: &neo4j_container
-  image: neo4j:3.5
-  ports:
-    - "7474:7474"
-    - "7687:7687"
-  environment:
-    NEO4J_AUTH: none
-
 version: '3.6'
 services: 
     api:
         build: .
-        command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
         container_name: api
+        network_mode: "bridge"
         depends_on:
-          - neo4j_development
+            - neo4j_development
         ports:
-          - "8080:8080"
-        environment:
-          <<: *postgres_environment
-        volumes:
-          - .:/var/app/current
-
+            - "8080:8080"
+        links:
+            - neo4j_development:neo4j_development
+            
     neo4j_development: 
-        <<: *neo4j_container
         container_name: neo4j_development
-
-networks:
-    default:
+        network_mode: "bridge"
+        image: neo4j:3.5
+        ports:
+            - "7474:7474"
+            - "7687:7687"
+        environment:
+            NEO4J_AUTH: none
           
