--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
             - "8080:8080"
         links:
             - neo4j_development:neo4j_development
+        environment: 
+            - DB_URI="bolt://neo4j_development:7687"
+            - USERNAME=""
+            - PASSWORD=""
             
     neo4j_development: 
         container_name: neo4j_development
