--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -10,10 +10,12 @@ jobs:
         runs-on: ${{ matrix.platform }}
         steps:
         - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-            go-version: ${{ matrix.go-version }}
+            uses: actions/setup-go@v2
+            with:
+                go-version: ${{ matrix.go-version }}
         - name: Checkout code
-        uses: actions/checkout@v2
+            uses: actions/checkout@v2
+        - name: Install dependencies
+            run: go get ./...
         - name: Test
-        run: go test ./...
+            run: go test ./...
