--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,18 +1,19 @@
 on: [push, pull_request]
 name: Test
 jobs:
-    test:
-        strategy:
+  test:
+    strategy:
         matrix:
             go-version: [1.13.x, 1.14.x]
-            platform: [ubuntu-latest, macos-latest, windows-latest]
-        runs-on: ${{ matrix.platform }}
-        steps:
+    runs-on: ubuntu-latest
+    steps:
         - name: Install Go
-            uses: actions/setup-go@v2
-            with:
-                go-version: ${{ matrix.go-version }}
+          uses: actions/setup-go@v2
+          with:
+              go-version: ${{ matrix.go-version }}
         - name: Checkout code
-            uses: actions/checkout@v2
+          uses: actions/checkout@v2
+        - name: Get dependencies
+          run: go get ./...
         - name: Test
-            run: go test ./...
+          run: go test ./...
