--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,10 +13,10 @@ jobs:
               go-version: ${{ matrix.go-version }}
         - name: Checkout code
           uses: actions/checkout@v2
-        - name: Bolt dependencies
-          run: sudo add-apt-repository ca-certificates cmake make g++ openssl-dev openssl-libs-static git curl pkgconfig
+        - name: Install ca-certificates
+          run: sudo add-apt-repository ca-certificates
         - name: Bolt dependencies - Install
-          run: sudo apt-get install ca-certificates cmake make g++ openssl-dev openssl-libs-static git curl pkgconfig
+          run: sudo apt-get install ca-certificates
         - name: Clone seabolt repository
           run: sudo git clone -b 1.7 https://github.com/neo4j-drivers/seabolt.git /seabolt
         - name: Test
