--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -18,7 +18,7 @@ jobs:
           run: sudo apt-get install -y libssl1.0.0 
 
         - name: Unzip seabolt dependencies
-          run: dpkg -i seabolt-1.7.4-Linux-ubuntu-$(lsb_release -rs).deb
+          run: sudo dpkg -i seabolt-1.7.4-Linux-ubuntu-$(lsb_release -rs).deb
 
         - name: Clone seabolt repository
           run: sudo git clone -b 1.7 https://github.com/neo4j-drivers/seabolt.git /seabolt
