Fetch step added

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,6 +17,9 @@ jobs:
         - name: Install seabolt Dependencies
           run: sudo apt-get install -y libssl1.0.0 
 
+        - name: Fetch latest package
+          run: wget https://github.com/neo4j-drivers/seabolt/releases/download/v1.7.4/seabolt-1.7.4-Linux-ubuntu-$(lsb_release -rs).deb
+
         - name: Unzip seabolt dependencies
           run: sudo dpkg -i seabolt-1.7.4-Linux-ubuntu-$(lsb_release -rs).deb
 
