--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -26,5 +26,5 @@ jobs:
         - name: Clone seabolt repository
           run: sudo git clone -b 1.7 https://github.com/neo4j-drivers/seabolt.git /seabolt
 
-        - name: Test
-          run: go test ./...
+        - name: Generate coverage
+          run: ./cover.sh
