--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,10 @@ coverage:
         target: auto
         threshold: 100%
         base: auto 
+        # advanced
+        branches: 
+          - master
+        if_not_found: success
+        if_ci_failed: error
+        informational: false
+        only_pulls: false
