--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,8 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+            token: ${{ secrets.PAT }} 
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
