Terraform remote state management (#11)
* terraform backend added

* Remove apply from integration workflow

* Remove PAT usage

* Renew terraform infrastructure

* Destroy auto approve

* ECS terraforming complete

* Add ecr repository terraform resource

* Test push images to ECR

* Trigger first image creation

* Login to aws ecs step added

* Terraform clud infra

* Type fix

* Update service roles

* Tear down infra

* Update role - policy for auto scale group

* Terraform validate command tested

* Destroy infra

* Updated roles

* Uncomment backend

* Apple terraform changes

* auto scale role typo fixed

* Update auto scale role principals

* Rename attachment resource

* Dependency updated

* Remove redundant roels

* Tear down infrastructure

* Deploy configuration updated

* Uncomment code from integrate workflow

* add dummy image to variables

* update ec2 subnet id

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,8 +11,28 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-            token: ${{ secrets.PAT }} 
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+    
+    - name: Build, tag, and push image to Amazon ECR
+      id: build-image
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: sentinel-community
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
@@ -20,12 +40,4 @@ jobs:
             cd infrastructure/dev
             terraform init
             terraform plan
-            terraform apply -auto-approve
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    
-    
-
-
-      
+            terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve  
