--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,8 +14,6 @@ jobs:
         
         - name: Checkout code
           uses: actions/checkout@v2
-          with:
-            token: ${{ secrets.PAT }} 
 
         - name: Install seabolt Dependencies
           run: |
@@ -34,7 +32,7 @@ jobs:
             env_vars: OS,GO
             name: codecov-umbrella
             fail_ci_if_error: true
-
+        
         - name: Setup Terraform
           uses: hashicorp/setup-terraform@v1
         
@@ -43,8 +41,9 @@ jobs:
                 cd infrastructure/dev
                 terraform init
                 terraform plan
-
+                terraform validate
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: ${{ secrets.AWS_REGION }}
         
