--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,8 +40,8 @@ jobs:
           run: |
                 cd infrastructure/dev
                 terraform init
+                terraform validate
                 terraform plan
-                terraform destroy -auto-approve
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
