--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,8 @@
             "mode": "auto",
             "program": "${fileDirname}",
             "env": {
+                "HOST": "localhost",
+                "PORT": 8080,
                 "DB_URI": "bolt://neo4jdevelopment:7687",
                 "USERNAME": "",
                 "PASSWORD":"",
