--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,5 +39,6 @@ jobs:
     - run: |
             cd infrastructure/dev
             terraform init
+            
             terraform plan
-            terraform destroy -auto-approve
+            terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
