--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -44,7 +44,7 @@ jobs:
                 cd infrastructure/dev
                 terraform init
                 terraform validate
-                terraform destroy -auto-approve
+                terraform plan
           env:
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
