Deploy react app to s3

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,21 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Setup Terraform
+      id: terraform-apply
       uses: hashicorp/setup-terraform@v1
-    - run: |
+      run: |
             cd infrastructure/dev
             terraform init
             
             terraform plan
             terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
+            echo "::set-output name=website_bucket::terraform output website_bucket"
+
+    - name: Deploy Website
+      uses: chrislennon/action-aws-cli@v1.1
+      run: |
+          cd app
+          yarn build
+          s3 cp build/* s3://${{ steps.terraform-apply.outputs.website_bucket }}
+
+
