--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Setup Terraform
       id: terraform-apply
       uses: hashicorp/setup-terraform@v1
-      run: |
+    - run: |
             cd infrastructure/dev
             terraform init
             
@@ -48,7 +48,7 @@ jobs:
 
     - name: Deploy Website
       uses: chrislennon/action-aws-cli@v1.1
-      run: |
+    - run: |
           cd app
           yarn build
           s3 cp build/* s3://${{ steps.terraform-apply.outputs.website_bucket }}
