--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,6 @@ jobs:
       uses: chrislennon/action-aws-cli@v1.1
     - run: |
           cd app
-          s3 cp build/* s3://${{ steps.terraform-apply.outputs.website_bucket }}
+          aws s3 cp build/ s3://${{ steps.terraform-apply.outputs.website_bucket }}
 
 
