--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
             
             terraform plan
             terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-            echo "::set-output name=website_bucket::terraform output website_bucket"
+            echo "::set-output name=website_bucket_arn::terraform output website_bucket_arn"
     
     - name: Build Website
       uses: borales/actions-yarn@v2.1.0
@@ -57,6 +57,6 @@ jobs:
       uses: chrislennon/action-aws-cli@v1.1
     - run: |
           cd app
-          aws s3 cp build/ s3://${{ steps.terraform-apply.outputs.website_bucket }}
+          aws s3 cp build/ s3://${{ steps.terraform-apply.outputs.website_bucket_arn }}
 
 
