Add root gitignore, update

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,8 @@ jobs:
             
             terraform plan
             terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-            echo "::set-output name=website_bucket_arn::terraform output website_bucket_arn"
+            terraform output website_bucket_arn
+            echo "::set-output name=website_bucket_arn::(terraform output website_bucket_arn)"
     
     - name: Build Website
       uses: borales/actions-yarn@v2.1.0
