refactor paths, fix typos, fix s3 bucket arn in deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,14 +38,14 @@ jobs:
     - name: Setup Terraform
       id: terraform-apply
       uses: hashicorp/setup-terraform@v1
+
     - run: |
             cd infrastructure/dev
             terraform init
             
             terraform plan
             terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-            terraform output website_bucket_arn
-            echo "::set-output name=website_bucket_arn::(terraform output website_bucket_arn)"
+            echo "::set-output name=website_bucket_arn::$(terraform output website_bucket_arn)"
     
     - name: Build Website
       uses: borales/actions-yarn@v2.1.0
