Use terraform output explicitly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,13 +41,13 @@ jobs:
     - name: Terraform Apply
       id: terraform-apply
       run: |
-            cd infrastructure/dev
-            terraform init
-            
-            terraform plan
-            terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-            WEBSITE_BUCKET_ARN=(terraform output website_bucket_arn)
-            echo "::set-output name=WEBSITE_BUCKET_ARN::$WEBSITE_BUCKET_ARN"
+        cd infrastructure/dev
+        terraform init
+        
+        terraform plan
+        terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
+        WEBSITE_BUCKET_ARN=(terraform output website_bucket_arn)
+        echo "::set-output name=WEBSITE_BUCKET_ARN::$WEBSITE_BUCKET_ARN"
     
     - name: Install Yarn
       uses: borales/actions-yarn@v2.1.0
@@ -64,8 +64,8 @@ jobs:
     - name: Deploy Website
       run: |
           cd app
-          echo ${{ steps.terraform-apply.outputs.website_bucket_arn }}
+          echo $(terraform output website_bucket_arn)
           echo ${{ steps.terraform-apply.outputs.WEBSITE_BUCKET_ARN }}
-          aws s3 sync ./build ${{ steps.terraform-apply.outputs.WEBSITE_BUCKET_ARN }} --recursive
+          aws cp sync ./build $(terraform output website_bucket_arn) --recursive
 
 
