--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
         terraform plan
         terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
         BUCKET_ARN=$(terraform output website_bucket_arn)
-        echo "::set-output name=WEBSITE_BUCKET_ARN::WEBSITE_BUCKET_ARN"
+        echo "::set-output name=WEBSITE_BUCKET_ARN::$BUCKET_ARN"
     
     - name: Install Yarn
       uses: borales/actions-yarn@v2.1.0
