--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,7 @@ jobs:
         
         terraform plan
         terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-        BUCKET_ARN=$(terraform output website_bucket_arn)
-        echo "::set-output name=WEBSITE_BUCKET_ARN::$BUCKET_ARN"
+        echo "::set-output name=WEBSITE_BUCKET_ARN::${{ terraform output website_bucket_arn }}"
     
     - name: Install Yarn
       uses: borales/actions-yarn@v2.1.0
