Format interpolation test

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,9 +46,7 @@ jobs:
         
         terraform plan
         terraform apply -var 'app_image=${{ steps.build-image.outputs.image }}' -auto-approve
-        $BUCKET_ARN=$(terraform output website_bucket_arn)
-        echo $BUCKET_ARN
-        echo "::set-output name=WEBSITE_BUCKET_ARN::$BUCKET_ARN"
+        echo "::set-output name=WEBSITE_BUCKET_ARN::${{ format('{0}', terraform output website_bucket_arn) }}"
     
     - name: Install Yarn
       uses: borales/actions-yarn@v2.1.0
@@ -65,6 +63,7 @@ jobs:
     - name: Deploy Website
       run: |
           cd app
+          echo ${{ steps.terraform-apply.outputs.website_bucket_arn }}
           echo ${{ steps.terraform-apply.outputs.WEBSITE_BUCKET_ARN }}
           aws cp sync ./build ${{ steps.terraform-apply.outputs.WEBSITE_BUCKET_ARN }} --recursive
 
