--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
           yarn build
           
     - name: Deploy Website
-    - uses: jakejarvis/s3-sync-action@master
+      uses: jakejarvis/s3-sync-action@master
       env:
         AWS_S3_BUCKET: ${{ steps.terraform-apply.outputs.stdout }}
         SOURCE_DIR: './app/build'      # optional: defaults to entire repository
