--- a/sentinel/.vscode/launch.json
+++ b/sentinel/.vscode/launch.json
@@ -14,7 +14,7 @@
             "env": {
                 "HOST": "localhost",
                 "PORT": 8080,
-                "DB_URI": "bolt://neo4jdevelopment:7687",
+                "DB_URI": "bolt://localhost:7687",
                 "USERNAME": "",
                 "PASSWORD":"",
             },
