--- a/sentinel/.vscode/launch.json
+++ b/sentinel/.vscode/launch.json
@@ -14,9 +14,9 @@
             "env": {
                 "HOST": "localhost",
                 "PORT": 8080,
-                "DB_URI": "bolt://localhost:7687",
-                "USERNAME": "",
-                "PASSWORD":"",
+                "DB_URI": "bolt://ec2-18-210-33-93.compute-1.amazonaws.com:7687",
+                "USERNAME": "neo4j",
+                "PASSWORD": "i-0f14233ec48c32068",
             },
             "args": []
         }
