--- a/apis/sentinel/.vscode/launch.json
+++ b/apis/sentinel/.vscode/launch.json
@@ -4,7 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "name": "Launch Sentinel API",
             "type": "go",
@@ -12,8 +11,11 @@
             "mode": "auto",
             "program": "${fileDirname}",
             "env": {
+                "ENV": "dev",
+                "STATSD_HOST": "localhost",
+                "STATSD_PORT": 8125,
                 "HOST": "localhost",
-                "PORT": 8080,
+                "PORT": 8081,
                 "DB_URI": "bolt://localhost:7687",
                 "USERNAME": "",
                 "PASSWORD": "",
