--- a/apis/sentinel/.vscode/launch.json
+++ b/apis/sentinel/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Sentinel API",
+      "name": "Launch Sentinel",
       "type": "go",
       "request": "launch",
       "mode": "auto",
