--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -8,64 +8,68 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Checkout code
-      uses: actions/checkout@v2
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with: 
-        terraform_wrapper: false
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_wrapper: false
 
-    - name: Terraform Apply
-      id: terraform-apply
-      run: |
-        cd infrastructure/beanstalk
-        terraform init
-        terraform plan
-        terraform apply -var 'username=${{ secrets.USERNAME }}' -var 'password=${{ secrets.PASSWORD }}' -var 'db_uri=${{ secrets.DB_URI }}' -var 'acm_certificate_arn=${{ secrets.ACM_CERTIFICATE_ARN }}' -auto-approve
-        echo "::set-env name=WEBSITE_BUCKET::$(terraform output website_bucket_id)"
-        echo "::set-env name=APPLICATION_NAME::$(terraform output application_name)"
-        echo "::set-env name=ENVIRONMENT_NAME::$(terraform output environment_name)"
-    
-    - name: Generate deployment zip
-      run: |
-        cd apis/sentinel
-        zip -r deploy.zip * -x "**.vscode**"
+      - name: Terraform Apply
+        id: terraform-apply
+        run: |
+          cd infrastructure/beanstalk
+          terraform init
+          terraform plan
+          terraform apply -var 
+            'username=${{ secrets.USERNAME }}' 
+            -var 'password=${{ secrets.PASSWORD }}' 
+            -var 'db_uri=${{ secrets.DB_URI }}' 
+            -var 'acm_certificate_arn=${{ secrets.ACM_CERTIFICATE_ARN }}' 
+            -var 'newrelicLicense=${{ secrets.NEW_RELIC_LICENSE }}' -auto-approve
+          echo "::set-env name=WEBSITE_BUCKET::$(terraform output website_bucket_id)"
+          echo "::set-env name=APPLICATION_NAME::$(terraform output application_name)"
+          echo "::set-env name=ENVIRONMENT_NAME::$(terraform output environment_name)"
 
-    - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v11
-      with:
-        aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: ${{ env.APPLICATION_NAME }}
-        environment_name: ${{ env.ENVIRONMENT_NAME }}
-        version_label: ${{ github.sha }}
-        region: us-east-1
-        deployment_package: ./apis/sentinel/deploy.zip
+      - name: Generate deployment zip
+        run: |
+          cd apis/sentinel
+          zip -r deploy.zip * -x "**.vscode**"
 
-    - name: Install Yarn
-      uses: borales/actions-yarn@v2.1.0
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v11
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: ${{ env.APPLICATION_NAME }}
+          environment_name: ${{ env.ENVIRONMENT_NAME }}
+          version_label: ${{ github.sha }}
+          region: us-east-1
+          deployment_package: ./apis/sentinel/deploy.zip
 
-    - name: Install AWS CLI
-      uses: chrislennon/action-aws-cli@v1.1
-    
-    - name: Build Website
-      run: |
-        cd app
-        yarn install
-        yarn build
-          
-    - name: Deploy Website
-      env:
-        WEBSITE_BUCKET: ${{ env.WEBSITE_BUCKET }}
-      run: |
-        cd app
-        aws s3 sync ./build/ s3://$WEBSITE_BUCKET
+      - name: Install Yarn
+        uses: borales/actions-yarn@v2.1.0
+
+      - name: Install AWS CLI
+        uses: chrislennon/action-aws-cli@v1.1
+
+      - name: Build Website
+        run: |
+          cd app
+          yarn install
+          yarn build
+
+      - name: Deploy Website
+        env:
+          WEBSITE_BUCKET: ${{ env.WEBSITE_BUCKET }}
+        run: |
+          cd app
+          aws s3 sync ./build/ s3://$WEBSITE_BUCKET
